Update for Java 14, get rid of Android/iOS/HTML projects